# gitbutler

./: .mailmap  CODEOWNERS  Cargo.toml  flake.nix  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: osv-scanner.yml  push.yaml  test-e2e.yml  zizmor.yml
app/: package.json
apps/desktop/: package.json  vite.config.ts
apps/lite/: package.json
crates/: AGENTS.md  WORKSPACE_MODEL.md
crates/but/: AGENTS.md  Cargo.toml
crates/but-agentlog/: Cargo.toml
crates/but-agentlog/src/: capture.rs  cli.rs  gitmeta.rs  lib.rs  redaction.rs  transcript.rs
crates/but-api/: Cargo.toml
crates/but-api/src/: branch.rs
crates/but-core/src/: ref_metadata.rs
crates/but-ctx/src/: legacy.rs  lib.rs
crates/but-debug/: Cargo.toml
crates/but-debug/src/: args.rs  lib.rs
crates/but-error/src/: lib.rs
crates/but-feedback/src/: lib.rs
crates/but-forge/: Cargo.toml
crates/but-forge/src/: lib.rs  review.rs
crates/but-graph/: Cargo.toml
crates/but-graph/src/: api.rs  debug.rs  lib.rs  segment.rs  statistics.rs  target_ref_relations.rs  utils.rs
crates/but-rebase/src/: cherry_pick.rs
crates/but-schemars/src/: lib.rs
crates/but-testsupport/src/: graph.rs
crates/but-workspace/src/: ref_info.rs  upstream_integration.rs
crates/but/skill/: SKILL.md
crates/but/src/: lib.rs
crates/gitbutler-branch-actions/src/: actions.rs  base.rs  branch.rs  stack.rs  upstream_integration.rs
crates/gitbutler-edit-mode/src/: lib.rs
crates/gitbutler-oplog/: Cargo.toml
crates/gitbutler-tauri/: Cargo.toml
e2e/playwright/: playwright.config.ts
(+188 files in other folders)
