[package]
name = "but-agentlog"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "Capture coding-agent session logs into Git metadata"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["clock"] }
clap.workspace = true
gix.workspace = true
git-meta-lib = { git = "https://github.com/git-meta/git-meta.git", rev = "5d7ba3d77700938db819b645c746ab193df73e3a" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
